refactor: remove SDK documentation and application structure
- Deleted SDK documentation (SDK.md) as it is no longer needed.
- Removed application initialization files and API route definitions.
- Eliminated OpenAPI configuration and health check routes.
- Cleaned up Docker SDK routes and related schemas.
- Removed main application entry point and configuration settings.
- Deleted Docker Compose configuration and associated environment variables.
- Updated requirements to remove unused packages and added Flask dependencies.
- Removed test scripts and unit tests for health and SDK functionalities.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
+
+# Distribution / packaging
 .Python
-env/
-venv/
-ENV/
 build/
 develop-eggs/
 dist/
@@ -26,41 +27,109 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.project
-.pydevproject
-.settings/
-*.sublime-project
-*.sublime-workspace
+# PyInstaller
+*.manifest
+*.spec
 
-# Testing
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
 
-# Environment
-.env
-.env.local
-.env.*.local
+# Translations
+*.mo
+*.pot
 
-# OS
-.DS_Store
-Thumbs.db
+# Django stuff:
 *.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
-# Docker
-.docker/
+# Flask stuff:
+instance/
+.webassets-cache
 
-# Project specific
-node_modules/
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+# FastAPI
+.fastapi_cache/
+__pycache__/
+*.pyc
+.env.local
