--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,13 @@
-# FastAPI and related packages
-fastapi==0.108.0
-uvicorn[standard]==0.25.0
-pydantic==2.5.2
-pydantic-settings==2.1.0
-
-# Flask for additional API
-flask==3.0.0
-flask-cors==4.0.0
-
-# Docker SDK for container management
-docker==6.1.3
-
-# Redis for caching/queuing
-redis==5.0.1
-
-# HTTP client and tools
-httpx==0.26.0
-requests==2.31.0
-
-# System monitoring
-psutil==5.9.6
-
-# Utilities
-colorama==0.4.6
-python-multipart==0.0.6
-
-# Development dependencies
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.12.1
-flake8==6.1.0
-isort==5.13.2
-
-# Documentation
-pydantic[email]==2.5.2
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+click==8.3.1
+fastapi==0.129.0
+h11==0.16.0
+idna==3.11
+pydantic==2.12.5
+pydantic_core==2.41.5
+starlette==0.52.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.40.0
